--- a/booking.html
+++ b/booking.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <style>
-    /* Shining animation for Book Now button */
+    /* Shining animation for Book Now btn */
     .btn-shine {
       position: relative;
       overflow: hidden;
