--- a/booking.html
+++ b/booking.html
@@ -204,7 +204,7 @@
       </p>
     </div>
 
-    <!-- Quick Links -->
+    <!-- Quick Link -->
     <nav>
       <h4 class="text-xl font-semibold mb-4 text-yellow-400">Quick Links</h4>
       <ul class="space-y-3">
