--- a/booking.html
+++ b/booking.html
@@ -84,7 +84,7 @@
   </div>
 
   <script>
-    // Mobile menu toggle script
+    // Mobile phone menu toggle script
     const menuButton = document.getElementById('menu-button');
     const mobileMenu = document.getElementById('mobile-menu');
 
